--- a/Tribute Page/tribute.html
+++ b/Tribute Page/tribute.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="freeCodeCamp Accessibility Quiz practice project" />
     <title id="title">Martin Luther King Jr.</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./tribute.css" />
   </head>
   <body>
     <main id="main">
