--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Kenny's Personal Portfolio</title>
-        <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="./stylesheet.css" />
     </head>
     <body>
         <header>
@@ -18,11 +18,14 @@
         </header>
         <main>
             <secion id="welcome-section">
-                <h1>Welcome To Kenny Personal Portfolio</h1>
+                <h1>Welcome To Tung Vu's Personal Portfolio</h1>
                 <p>A Self-taught Developer</p>
             </secion>
             <section id="projects">
-
+                <h2 class="project-header">These are some of my projects</h2>
+                <div class="project-grid">
+                    
+                </div>
             </section>
             <section id="contact">
 
