--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Tung Vu's Personal Portfolio</title>
         <link rel="stylesheet" href="./stylesheet.css" />
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&amp;display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Raleway:700&amp;display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 
     <body>
@@ -49,23 +47,23 @@
             <section id="contact">
                 <div class="contact-header">
                     <h2>Let's work together</h2>
-                    <p>Please feel free to reachout to me using the contacts below</p>
+                    <p style="color: white; font-style: italic; padding: 10%;">Please feel free to reachout to me using the contacts below</p>
                 </div>
                 <div class="contact-links">
-                    <a href="https://www.facebook.com/kennyvu2511" target="_blank" class="btn contact-details"><i class="fab fa-facebook-square"></i> Facebook</a>
-                    <a id="profile-link" href="https://github.com/tungvu1234" target="_blank" class="btn contact-details"><i class="fab fa-github"></i> GitHub</a>
-                    <a href="mailto:tungvu1234@yahoo.com.vn" class="btn contact-details"><i class="fas fa-at"></i> Send a mail</a>
-                    <a href="tel:(+84)37 739 3379" class="btn contact-details"><i class="fas fa-mobile-alt"></i> Call me</a>
+                    <a href="https://www.facebook.com/kennyvu2511" target="_blank" class="fa fa-facebook"></a>
+                    <a href="https://github.com/tungvu1234" target="_blank" class="fa fa-github"></a>
+                    <a href="mailto:tungvu1234@yahoo.com.vn" target="blank" class="fa fa-yahoo"></a>
+                    <a href="tel:(+84)37 739 3379" class="fa fa-rss"></a>
                   </div>
             </section>
         </main>
         <footer>
-            <p>
+            <p style="margin: 0; border-top:lavender solid">
               This Portfolio Was Created On The August 16, 2022.
             </p>
             <p>
               A Special Thank To
-              <a href="https://www.freecodecamp.com/" target="_blank">freeCodeCamp <i class="fab fa-free-code-camp"></i></a>
+              <a href="https://www.freecodecamp.com/" target="_blank" style="text-decoration: underline;">freeCodeCamp</a>
             </p>
           </footer>
     </body>
