--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <section id="contact">
                 <div class="contact-header">
                     <h2>Let's work together</h2>
-                    <p style="color: white; font-style: italic; padding: 10%;">Please feel free to reachout to me using the contacts below</p>
+                    <p style="color: white; font-style: italic; padding: 5%; margin: 0%;">Please feel free to reachout to me using the contacts below</p>
                 </div>
                 <div class="contact-links">
                     <a href="https://www.facebook.com/kennyvu2511" target="_blank" class="fa fa-facebook"></a>
@@ -55,16 +55,17 @@
                     <a href="mailto:tungvu1234@yahoo.com.vn" target="blank" class="fa fa-yahoo"></a>
                     <a href="tel:(+84)37 739 3379" class="fa fa-rss"></a>
                   </div>
+                  <footer>
+                    <p>
+                      This Portfolio Was Created On The August 16, 2022.
+                    </p>
+                    <p>
+                      A Special Thank To
+                      <a href="https://www.freecodecamp.com/" target="_blank" style="text-decoration: underline;">freeCodeCamp</a>
+                    </p>
+                  </footer>
             </section>
         </main>
-        <footer>
-            <p style="margin: 0; border-top:lavender solid">
-              This Portfolio Was Created On The August 16, 2022.
-            </p>
-            <p>
-              A Special Thank To
-              <a href="https://www.freecodecamp.com/" target="_blank" style="text-decoration: underline;">freeCodeCamp</a>
-            </p>
-          </footer>
+        
     </body>
 </html>
