--- a/docs.html
+++ b/docs.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Project number 3</title>
-        <link rel="stylesheet" type ="text/css" href="./docs.css" />
+        <link rel="stylesheet" type ="text/css" href="./stylesheets/docs.css" />
     </head>
     <body>
         <nav id="navbar">
