--- a/form.html
+++ b/form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="./form.css" />
+    <link rel="stylesheet" href="./stylesheets/form.css" />
   </head>
   <body>
     <h1 id="title">Survey Form</h1>
