--- a/pl.html
+++ b/pl.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title></title>
-        <link rel="stylesheet" href="./pl.css" />
+        <link rel="stylesheet" href="./stylesheets/pl.css" />
     </head>
     <body>
         <header id="header">
